Fri Feb  7 21:58:48 2014  Zachary Scott  <e@zzak.io>

	* lib/open-uri.rb: [DOC] use lower case version of core classes, same
	  as commit r44878, based on patch by Jonathan Jackson [Bug #9483]

Fri Feb  7 21:54:53 2014  Zachary Scott  <e@zzak.io>

	* ext/ripper/lib/ripper/lexer.rb: [DOC] use lower case version of core
	  classes when referring to return value, since we aren't directly
	  talking about the class. Patch by Jonathan Jackson [Bug #9483]

Fri Feb 7 05:28:38 2014  Eric Wong  <e@80x24.org>

	* constant.h: reduce rb_const_entry_t size on 64-bit
	  Patch by Adam Avilla [ruby-core:60542] [Feature #9496]

Thu Feb  6 15:27:46 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_int): correct warning messages.

	* gc.c (get_envparam_double): ditto.

Thu Feb  6 15:17:30 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_int): don't accept a value equals to lowerbound
	  (changed by last commit) because "" or "foo" (not a number) strings
	  are parsed as 0. They should be rejected.

	* gc.c (get_envparam_double): ditto.

Thu Feb  6 09:00:35 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (ruby_gc_set_params): if RUBY_GC_OLDMALLOC_LIMIT is provided,
	  then set objspace->rgengc.oldmalloc_increase_limit.
	  Without this fix, the env variable RUBY_GC_OLDMALLOC_LIMIT
	  does not work.

	* gc.c (get_envparam_int): accept a value equals to lowerbound.

	* gc.c (get_envparam_double): ditto.

Thu Feb 6 08:23:28 2014  Eric Wong  <e@80x24.org>

	* ext/thread/thread.c (rb_szqueue_max_set): use correct queue and
	  limit wakeups.  [Bug #9343][ruby-core:60517]
	* test/thread/test_queue.rb (test_sized_queue_assign_max):
	  test for bug

Thu Feb  6 07:18:01 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.2.2.  Complete history at:

	  http://rubygems.rubyforge.org/rubygems-update/History_txt.html#label-2.2.2+%2F+2014-02-05

	* test/rubygems:  ditto.

Wed Feb  5 20:56:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
